--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body>
     <!-- Шапка -->
@@ -71,9 +72,9 @@
 
     <!-- Примеры работ -->
     <main>
-      <section class="portfolio-section">
+      <section class="portfolio">
         <div class="container">
-          <h1 hidden>Приклади робіт</h1>
+          <h1 class="hidden-title">Приклади робіт</h1>
           <ul class="portfolio-btn-list list">
             <li class="portfolio-btn-item">
               <button class="portfolio-btn" type="button">Усі</button>
