--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body>
     <!-- Шапка -->
@@ -144,7 +145,7 @@
       </section>
 
       <!-- Список занятий -->
-      <section class="work-section">
+      <section class="work">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="work-list list">
@@ -177,7 +178,7 @@
       </section>
 
       <!-- Наша команда -->
-      <section class="team-section">
+      <section class="team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-list list">
