--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!-- Шапка -->
@@ -31,29 +30,29 @@
             Web<span class="logo-black">Studio</span>
           </a>
           <!-- Навигация -->
-          <ul class="header-nav-list list">
-            <li class="header-nav-item">
-              <a class="header-nav-link link current" href="./index.html"
+          <ul class="header-nav__list list">
+            <li class="header-nav__item">
+              <a class="header-nav__link link current" href="./index.html"
                 >Студія</a
               >
             </li>
 
-            <li class="header-nav-item">
-              <a class="header-nav-link link" href="./portfolio.html"
+            <li class="header-nav__item">
+              <a class="header-nav__link link" href="./portfolio.html"
                 >Портфоліо</a
               >
             </li>
 
-            <li class="header-nav-item">
-              <a class="header-nav-link link" href="./index.html">Контакти</a>
+            <li class="header-nav__item">
+              <a class="header-nav__link link" href="./index.html">Контакти</a>
             </li>
           </ul>
         </nav>
         <!-- Контакты -->
-        <ul class="header-contact-list list">
-          <li class="header-contact-item">
+        <ul class="header-contact list">
+          <li class="header-contact__item">
             <a
-              class="header-contact-link link"
+              class="header-contact__link link"
               href="mailto:info@devstudio.com"
             >
               <svg class="contact-icon" width="16" height="12">
@@ -62,8 +61,8 @@
               info@devstudio.com</a
             >
           </li>
-          <li class="header-contact-item">
-            <a class="header-contact-link link" href="tel:+380961111111">
+          <li class="header-contact__item">
+            <a class="header-contact__link link" href="tel:+380961111111">
               <svg class="contact-icon" width="10" height="16">
                 <use href="./images/iconsprite.svg#icon-smartphone"></use>
               </svg>
@@ -359,53 +358,53 @@
       </section>
 
       <!-- Клиенты -->
-      <section class="client-section">
+      <section class="client">
         <div class="container">
-          <h2 class="client-title">Постійні клієнти</h2>
-          <ul class="client-list list">
-            <li class="client-item">
-              <a class="client-link link" href="">
-                <svg class="client-icon" width="41" height="47">
+          <h2 class="client__title">Постійні клієнти</h2>
+          <ul class="client__list list">
+            <li class="client__item">
+              <a class="client__link link" href="">
+                <svg class="client__icon" width="41" height="47">
                   <use href="./images/iconsprite.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="client-item">
-              <a class="client-link link" href="">
-                <svg class="client-icon" width="40" height="52">
+            <li class="client__item">
+              <a class="client__link link" href="">
+                <svg class="client__icon" width="40" height="52">
                   <use href="./images/iconsprite.svg#icon-client2"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="client-item">
-              <a class="client-link link" href="">
-                <svg class="client-icon" width="43" height="41">
+            <li class="client__item">
+              <a class="client__link link" href="">
+                <svg class="client__icon" width="43" height="41">
                   <use href="./images/iconsprite.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="client-item">
-              <a class="client-link link" href="">
-                <svg class="client-icon" width="84" height="40">
+            <li class="client__item">
+              <a class="client__link link" href="">
+                <svg class="client__icon" width="84" height="40">
                   <use href="./images/iconsprite.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="client-item">
-              <a class="client-link link" href="">
-                <svg class="client-icon" width="63" height="45">
+            <li class="client__item">
+              <a class="client__link link" href="">
+                <svg class="client__icon" width="63" height="45">
                   <use href="./images/iconsprite.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="client-item">
-              <a class="client-link link" href="">
-                <svg class="client-icon" width="94" height="44">
+            <li class="client__item">
+              <a class="client__link link" href="">
+                <svg class="client__icon" width="94" height="44">
                   <use href="./images/iconsprite.svg#icon-client6"></use>
                 </svg>
               </a>
@@ -424,26 +423,26 @@
               Web<span class="logo-white">Studio</span>
             </a>
             <!-- Контакты -->
-            <address class="footer-contacts">
-              <ul class="footer-contact-list list">
-                <li class="footer-contact-item">
+            <address class="footer-contact">
+              <ul class="footer-contact__list list">
+                <li class="footer-contact__item">
                   <a
-                    class="footer-contact-link address link"
+                    class="footer-contact__link address link"
                     href="https://goo.gl/maps/vBp6YSZijUW81bZh8 "
                     target="_blank"
                     rel="noreferrer noopener"
                     >м. Київ, пр-т Лесі Українки, 26</a
                   >
                 </li>
-                <li class="footer-contact-item">
+                <li class="footer-contact__item">
                   <a
-                    class="footer-contact-link link"
+                    class="footer-contact__link link"
                     href="mailto:info@devstudio.com"
                     >info@devstudio.com</a
                   >
                 </li>
-                <li class="footer-contact-item">
-                  <a class="footer-contact-link link" href="tel:+380961111111"
+                <li class="footer-contact__item">
+                  <a class="footer-contact__link link" href="tel:+380961111111"
                     >+38 096 111 11 11</a
                   >
                 </li>
@@ -451,36 +450,36 @@
             </address>
           </div>
 
-          <div class="footer-social-flex">
-            <p class="footer-social-text">приєднуйтесь</p>
-            <ul class="footer-social-list list">
-              <li class="footer-social-item">
-                <a class="footer-social-link" href="">
-                  <svg class="footer-social-icon" width="20" height="20">
+          <div class="footer-social">
+            <p class="footer-social__text">приєднуйтесь</p>
+            <ul class="footer-social__list list">
+              <li class="footer-social__item">
+                <a class="footer-social__link" href="">
+                  <svg class="footer-social__icon" width="20" height="20">
                     <use href="./images/iconsprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
 
-              <li class="footer-social-item">
-                <a class="footer-social-link" href="">
-                  <svg class="footer-social-icon" width="20" height="20">
+              <li class="footer-social__item">
+                <a class="footer-social__link" href="">
+                  <svg class="footer-social__icon" width="20" height="20">
                     <use href="./images/iconsprite.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
 
-              <li class="footer-social-item">
-                <a class="footer-social-link" href="">
-                  <svg class="footer-social-icon" width="20" height="20">
+              <li class="footer-social__item">
+                <a class="footer-social__link" href="">
+                  <svg class="footer-social__icon" width="20" height="20">
                     <use href="./images/iconsprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
 
-              <li class="footer-social-item">
-                <a class="footer-social-link" href="">
-                  <svg class="footer-social-icon" width="20" height="20">
+              <li class="footer-social__item">
+                <a class="footer-social__link" href="">
+                  <svg class="footer-social__icon" width="20" height="20">
                     <use href="./images/iconsprite.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -489,11 +488,11 @@
           </div>
 
           <div class="footer-submit">
-            <p class="footer-submit-text">Підпишіться на розсилку</p>
-            <form class="footer-submit-form">
-              <label class="footer-submit-label" for="submit-mail">
+            <p class="footer-submit__text">Підпишіться на розсилку</p>
+            <form class="footer-submit__form">
+              <label class="footer-submit__label" for="submit-mail">
                 <input
-                  class="footer-submit-input"
+                  class="footer-submit__input"
                   type="email"
                   name="submit-mail"
                   id="submit-mail"
@@ -501,7 +500,7 @@
                 />
               </label>
 
-              <button class="footer-submit-btn" type="submit">
+              <button class="footer-submit__btn" type="submit">
                 <span>Підписатися</span>
 
                 <svg class="" width="24" height="24">
@@ -529,24 +528,30 @@
 
           <div class="form-field top-title">
             <label class="form-label" for="name">Ім'я</label>
-            <input class="form-input" type="text" name="name" id="name" />
-            <svg class="input-icon" width="16" height="16">
-              <use href="./images/iconsprite.svg#icon-person"></use>
-            </svg>
+            <div class="imput-wrap">
+              <input class="form-input" type="text" name="name" id="name" />
+              <svg class="input-icon" width="16" height="16">
+                <use href="./images/iconsprite.svg#icon-person"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-field">
             <label class="form-label" for="tel">Телефон</label>
-            <input class="form-input" type="tel" name="tel" id="tel" />
-            <svg class="input-icon" width="16" height="16">
-              <use href="./images/iconsprite.svg#icon-phone"></use>
-            </svg>
+            <div class="imput-wrap">
+              <input class="form-input" type="tel" name="tel" id="tel" />
+              <svg class="input-icon" width="16" height="16">
+                <use href="./images/iconsprite.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-field">
             <label class="form-label" for="email">Пошта</label>
-            <input class="form-input" type="email" name="email" id="email" />
-            <svg class="input-icon" width="16" height="16">
-              <use href="./images/iconsprite.svg#icon-email"></use>
-            </svg>
+            <div class="imput-wrap">
+              <input class="form-input" type="email" name="email" id="email" />
+              <svg class="input-icon" width="16" height="16">
+                <use href="./images/iconsprite.svg#icon-email"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-field">
             <label class="comment-label" for="comment">Коментар</label>
@@ -580,10 +585,9 @@
                 <a href="#" class="form__field-link">Умови договору</a>
               </span>
             </label>
-
           </div>
           <!-- pppppppp -->
-          
+
           <button class="form-btn" type="submit">Відправити</button>
         </form>
       </div>
