додав бем, віправив закриття модальне вікно

--- a/index.html
+++ b/index.html
@@ -180,17 +180,16 @@
       <section class="team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="team-list list">
-            <li class="team-item">
+          <ul class="team__list list">
+            <li class="team__item">
               <img src="./images/igor.jpeg" alt="Ігор" width="270" />
-              <div class="team-workers">
-                <h3 class="team-worker">Ігор Дем'яненко</h3>
-                <p class="team-profession" lang="en">Product Designer</p>
-
-                <ul class="team-social-list list">
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+              <div class="team__workers">
+                <h3 class="team__worker">Ігор Дем'яненко</h3>
+                <p class="team__profession" lang="en">Product Designer</p>
+                <ul class="team__social-list list">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use
                           href="./images/iconsprite.svg#icon-instagram"
                         ></use>
@@ -198,25 +197,25 @@
                     </a>
                   </li>
 
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use href="./images/iconsprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use href="./images/iconsprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use href="./images/iconsprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -224,16 +223,16 @@
                 </ul>
               </div>
             </li>
-            <li class="team-item">
+            <li class="team__item">
               <img src="./images/olya.jpeg" alt="Ольга" width="270" />
-              <div class="team-workers">
-                <h3 class="team-worker">Ольга Рєпіна</h3>
-                <p class="team-profession" lang="en">Frontend Developer</p>
+              <div class="team__workers">
+                <h3 class="team__worker">Ольга Рєпіна</h3>
+                <p class="team__profession" lang="en">Frontend Developer</p>
 
-                <ul class="team-social-list list">
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                <ul class="team__social-list list">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use
                           href="./images/iconsprite.svg#icon-instagram"
                         ></use>
@@ -241,25 +240,25 @@
                     </a>
                   </li>
 
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use href="./images/iconsprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use href="./images/iconsprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use href="./images/iconsprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -267,16 +266,16 @@
                 </ul>
               </div>
             </li>
-            <li class="team-item">
+            <li class="team__item">
               <img src="./images/kolya.jpeg" alt="Микола" width="270" />
-              <div class="team-workers">
-                <h3 class="team-worker">Микола Тарасов</h3>
-                <p class="team-profession" lang="en">Marketing</p>
+              <div class="team__workers">
+                <h3 class="team__worker">Микола Тарасов</h3>
+                <p class="team__profession" lang="en">Marketing</p>
 
-                <ul class="team-social-list list">
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                <ul class="team__social-list list">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use
                           href="./images/iconsprite.svg#icon-instagram"
                         ></use>
@@ -284,25 +283,25 @@
                     </a>
                   </li>
 
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use href="./images/iconsprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use href="./images/iconsprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use href="./images/iconsprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -310,16 +309,16 @@
                 </ul>
               </div>
             </li>
-            <li class="team-item">
+            <li class="team__item">
               <img src="./images/misha.jpeg" alt="Михайло" width="270" />
-              <div class="team-workers">
-                <h3 class="team-worker">Михайло Єрмаков</h3>
-                <p class="team-profession" lang="en">UI Designer</p>
+              <div class="team__workers">
+                <h3 class="team__worker">Михайло Єрмаков</h3>
+                <p class="team__profession" lang="en">UI Designer</p>
 
-                <ul class="team-social-list list">
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                <ul class="team__social-list list">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use
                           href="./images/iconsprite.svg#icon-instagram"
                         ></use>
@@ -327,25 +326,25 @@
                     </a>
                   </li>
 
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use href="./images/iconsprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use href="./images/iconsprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="team-social-item">
-                    <a href="" class="team-social-link link">
-                      <svg class="team-social-icon" width="20" height="20">
+                  <li class="team__social-item">
+                    <a href="" class="team__social-link link">
+                      <svg class="team__social-icon" width="20" height="20">
                         <use href="./images/iconsprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
